--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile project(path: ':wt_zinglib')
+//    compile project(path: ':wt_zinglib')
+    compile 'com.github.Waterelone:WT_Zxing:1.0.0'
     compile 'com.github.LuckSiege:PictureSelectorLight:v1.1.4'
 }
